name:                changed-mbid-service
version:             0.1.0.0
license:             GPL-2
license-file:        LICENSE
author:              MetaBrainz Foundation
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable changed-mbid-service
  hs-source-dirs: src
  main-is: Main.hs
  build-depends: 
    base >=4.3 && <=4.6,
    aeson >=0.6,
    bytestring >= 0.9,
    hashable < 1.2,
    unordered-containers >=0.2,
    text >=0.11,
    uuid >=1.2,
    snap-core >=0.9,
    snap-server >=0.9,
    directory <1.2,
    filepath <1.4,
    containers <0.5
